# solitaire

./: .gitignore  CMakeLists.txt  README.md
assets/: background.slang  card.slang
resources/: background.frag  background.vert  particle.frag  particle.vert  unlit.frag  unlit.vert  wireframe.frag
src/: card.cpp  card.h  components.h  dealer.cpp  dealer.h  dispatcher.cpp  dispatcher.h  dragging_animation.h  event.h  freecell.cpp  freecell.h  game_board.h  gamedata.h  history.h  iinput_handler.h  keycodes.h  main.cpp  model.h  moving_animation.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  serializer.h  shader.cpp  shader.h  solitaire.cpp  solitaire.h  texture.cpp  texture.h  timer.cpp  timer.h  ui_renderer.cpp  ui_renderer.h  window.cpp  window.h
src/animation/: animation_engine.cpp  animation_engine.h  dragging_animation.h  moving_animation.h
src/freecell/: freecell.cpp  freecell.h  freecell_boardmanager.cpp  freecell_boardmanager.h  freecell_datamanager.cpp  freecell_datamanager.h  freecell_gamelogic.cpp  freecell_gamelogic.h  freecell_input.cpp  freecell_input.h
src/game_common/: igame_handler.h
src/graphics/: mesh.cpp  mesh.h  model.h  particle.cpp  particle.h  renderer.cpp  renderer.h  renderer_vulkan.cpp  renderer_vulkan.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_renderer.cpp  vulkan_renderer.h
src/scoundrel/: scoundrel.cpp  scoundrel.h  scoundrel_boardmanager.cpp  scoundrel_boardmanager.h
src/utils/: handle.h  log.h
